--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,54 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-.kotlin
+# -------------------------
+# Maven
+# -------------------------
+/target/
+/.mvn/wrapper/maven-wrapper.jar
 
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
+# -------------------------
+# IntelliJ IDEA
+# -------------------------
+.idea/
 *.iml
+*.iws
 *.ipr
+out/
 
-### Eclipse ###
-.apt_generated
+# -------------------------
+# Eclipse
+# -------------------------
 .classpath
-.factorypath
 .project
-.settings
-.springBeans
-.sts4-cache
+.settings/
+.factorypath
+.apt_generated/
 
-### NetBeans ###
+# -------------------------
+# NetBeans
+# -------------------------
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
 build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
-### VS Code ###
+# -------------------------
+# VS Code
+# -------------------------
 .vscode/
 
-### Mac OS ###
+# -------------------------
+# Sistema
+# -------------------------
 .DS_Store
+Thumbs.db
 
+# -------------------------
+# Arquivos sensíveis
+# -------------------------
 .env
+
+# -------------------------
+# Outros
+# -------------------------
+*.log
